fixed issue with enter spacing

--- a/src/components/DataRender.css
+++ b/src/components/DataRender.css
@@ -10,7 +10,7 @@
   padding: 10px;
   margin: 55px;
   font-size: 15px;
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 .title {
   color: black;
